# macos-hid-example

./: .gitignore  CMakeLists.txt
include/: constants.h  helpers.h
src/: constants.c  helpers.c  main.c
